Leaderboard z-index fix, plus relogin debug

--- a/src/widgets/tabs/leaderboard/ui/components/top-leaderboard-unit/ui/styles/TopLeaderboardUnit.module.scss
+++ b/src/widgets/tabs/leaderboard/ui/components/top-leaderboard-unit/ui/styles/TopLeaderboardUnit.module.scss
@@ -5,7 +5,7 @@
   background-clip: text;
   backdrop-filter: blur(1px);
   &::before {
-    content: "";
+    content: '';
     width: 100%;
     height: 10%;
     top: 45%; // 50% - (height (in percentage) / 2)
