--- a/src/widgets/tabs/leaderboard/ui/styles/LeaderboardTab.module.scss
+++ b/src/widgets/tabs/leaderboard/ui/styles/LeaderboardTab.module.scss
@@ -2,16 +2,16 @@
   margin: 0 auto 80px auto;
   width: 90%;
   padding-inline: 16px;
-  // &::after {
-  //   content: '';
-  //   width: 100%;
-  //   height: 20%;
-  //   position: fixed;
-  //   bottom: 0;
-  //   left: 0;
-  //   background-color: rgba(14, 14, 14, 0.6);
-  //   z-index: 0;
-  // }
+  &::after {
+    content: '';
+    width: 100%;
+    height: 20%;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    background-color: rgba(14, 14, 14, 0.6);
+    z-index: 0;
+  }
 }
 
 .scroll {
@@ -29,4 +29,5 @@
   justify-content: center;
   width: 100%;
   padding-block: 16px;
+  z-index: 10;
 }
